; ModuleID = '/home/carl/AnghaBench/micropython/ports/esp8266/extr_machine_rtc.c_pyb_rtc_get_us_since_2000.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/esp8266/extr_machine_rtc.c_pyb_rtc_get_us_since_2000.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MEM_CAL_ADDR = common dso_local global i32 0, align 4
@MEM_DELTA_ADDR = common dso_local global i32 0, align 4
@rtc_last_ticks = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pyb_rtc_get_us_since_2000() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = load i32, i32* @MEM_CAL_ADDR, align 4
  %5 = call i32 (i32, ...) @system_rtc_mem_read(i32 %4, i64* %1, i64 8)
  %6 = load i32, i32* @MEM_DELTA_ADDR, align 4
  %7 = call i32 (i32, ...) @system_rtc_mem_read(i32 %6, i32* %2, i64 4)
  %8 = call i64 (...) @system_get_rtc_time()
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @rtc_last_ticks, align 8
  %11 = icmp slt i64 %9, %10
  br i1 %11, label %12, label %20

12:                                               ; preds = %0
  %13 = load i64, i64* %1, align 8
  %14 = trunc i64 %13 to i32
  %15 = shl i32 %14, 20
  %16 = load i32, i32* %2, align 4
  %17 = add nsw i32 %16, %15
  store i32 %17, i32* %2, align 4
  %18 = load i32, i32* @MEM_DELTA_ADDR, align 4
  %19 = call i32 @system_rtc_mem_write(i32 %18, i32* %2, i32 4)
  br label %20

20:                                               ; preds = %12, %0
  %21 = load i64, i64* %3, align 8
  store i64 %21, i64* @rtc_last_ticks, align 8
  %22 = load i64, i64* %3, align 8
  %23 = trunc i64 %22 to i32
  %24 = sext i32 %23 to i64
  %25 = load i64, i64* %1, align 8
  %26 = mul nsw i64 %24, %25
  %27 = ashr i64 %26, 12
  %28 = load i32, i32* %2, align 4
  %29 = sext i32 %28 to i64
  %30 = add nsw i64 %27, %29
  %31 = trunc i64 %30 to i32
  ret i32 %31
}

declare dso_local i32 @system_rtc_mem_read(i32, ...) #1

declare dso_local i64 @system_get_rtc_time(...) #1

declare dso_local i32 @system_rtc_mem_write(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
